feat: modifying databases endpoints
